Updates from ShareLaTeX

--- a/AddersFamily.tex
+++ b/AddersFamily.tex
@@ -4,14 +4,14 @@
 
 
 \subsection{Διάδοσης Κρατουμένου}
-Αθροιστής Διάδοσης Κρατουμένου ή Ripple-Carry Adder (RCA) είναι ο πιο απλός αθροιστής και το σχηματικό του παρουσιάστηκε στην εικόνα \ref{IntegerAdderSchematic}. Παρατηρείται πως για να υπολογιστεί το $sum_1$ δηλαδή το δεύτερο λιγότερο σημαντικό ψηφίο του αθροίσματος πρέπει πρώτα να υπολογιστεί το $c_{out}$ του προηγούμενου πλήρη αθροιστή, δηλαδή το $c_0$, αντίστοιχα για το τρίτο πρέπει να υπολογιστεί πρώτα το $c_0$ έπειτα από τον δεύτερο πλήρη αθροιστή να υπολογιστεί το $c_1$ με είσοδο στο $c_{in}$ το $c_0$ δηλαδή το $c_{out}$ του προηγούμενου FA. Επομένως κάθε FA δεν λειτουργεί παράλληλα με τα υπόλοιπα στοιχεία άθροισης, αλλά υπάρχει μια χρονική καθυστέρηση για να λάβει την σωστή είσοδο $c_{in}$. Αποτέλεσμα αυτού είναι πως στην χειρότερη περίπτωση, δηλαδή στην περίπτωση που το $c_{in}$ επηρεάζει άμεσα την τιμή του $c_{out}$ του αθροιστή, υπάρχει γραμμική αύξηση της καθυστέρησης με το μήκος του.
+Αθροιστής Διάδοσης Κρατουμένου ή Ripple-Carry Adder (RCA) είναι ο πιο απλός αθροιστής και το σχηματικό του παρουσιάστηκε στην εικόνα \ref{IntegerAdderSchematic}. Παρατηρείται πως για να υπολογιστεί το $sum_1$ δηλαδή το δεύτερο λιγότερο σημαντικό ψηφίο του αθροίσματος πρέπει πρώτα να υπολογιστεί το $c_{out}$ του προηγούμενου πλήρη αθροιστή, δηλαδή το $c_0$. Αντίστοιχα για το τρίτο πρέπει να υπολογιστεί πρώτα το $c_0$ έπειτα από τον δεύτερο πλήρη αθροιστή να υπολογιστεί το $c_1$ με είσοδο το $c_0$ του προηγούμενου FA. Επομένως κάθε FA δεν λειτουργεί παράλληλα με τα υπόλοιπα στοιχεία άθροισης, αλλά υπάρχει μια χρονική καθυστέρηση για να λάβει την σωστή είσοδο $c_{in}$. Αποτέλεσμα αυτού είναι πως στην χειρότερη περίπτωση, δηλαδή στην περίπτωση που το $c_{in}$ επηρεάζει άμεσα την τιμή του $c_{out}$ του αθροιστή, υπάρχει γραμμική αύξηση της καθυστέρησης με το μήκος του.
 Για παράδειγμα έχοντας έναν δυαδικό αθροιστή 8 ψηφίων και εισάγοντας τους αριθμούς Α = 00000000 και Β = 11111111 και $c_{in}$ = 0 θα πάρουμε έξοδο sum = 11111111 και $c_{out}$ = 0 . Αν κρατώντας όλες τις εισόδους σταθερές και αλλάζοντας μόνο την Α σε 00000001 δηλαδή το $A_0$=1 τότε το αποτέλεσμα θα είναι sum=00000000 και $c_{out}$ = 1. 
-\par
-Η περίπτωση που περιγράφηκε ανήκει στις χειρότερες περιπτώσεις διότι 
+
+Η περίπτωση που περιγράφηκε ανήκει στις χειρότερες περιπτώσεις διότι μία αλλαγή στο λιγότερο σημαντικό ψηφίο για να διαδοθεί στο σημαντικότερο ψηφίο του αθροίσματος καθώς και στο τελικό κρατούμενο εξόδου του αθροιστή, πρέπει να περάσει από όλα τα ενδιάμεσα στοιχεία άθροισης. Αυτό συνεπάγει και την άθροιση των καθυστερήσεων του κάθε FA στοιχείου. Παρόμοια περίπτωση θα καταγράφονταν αν άλλαζε η τιμή του κρατουμένου εισόδου, από μηδέν σε ένα, αντί του αριθμού A.
 
 
 \subsection{Παράλειψής Κρατουμένου}
-Για κάθε ψηφίο του αριθμού Α και Β ορίζονται δυο ακόμα στοιχεία , αυτά που παράγουν κρατούμενο ανεξάρτητα του κρατουμένου εισόδου και θα καλούνται generate και αυτά που διαδίδουν κρατούμενο και ονομάζουμε propagate. Σημειώνεται πως τα σήματα generate και propagate αναφέροντε στα ζεύγη των δυαδικών ψηφίων των αριθμών εισόδου. Οι εξισώσεις είναι αντίστοιχα :
+Για κάθε ψηφίο του αριθμού Α και Β ορίζονται δυο ακόμα στοιχεία , αυτά που παράγουν κρατούμενο ανεξάρτητα του κρατουμένου εισόδου του αντίστοιχου FA και θα καλούνται generate και αυτά που διαδίδουν κρατούμενο και ονομάζουμε propagate. Σημειώνεται πως τα σήματα generate και propagate αναφέροντε στα ζεύγη των δυαδικών ψηφίων των αριθμών εισόδου, δηλαδή $(A_i,B_i)$. Οι εξισώσεις είναι αντίστοιχα :
 \begin{equation}
 \begin{split}
     g_i &= A_i * B_i  \\
@@ -26,8 +26,8 @@
 
 %-----------------
 Οι αθροιστές Παράλειψής Κρατουμένου ή Carry Skip είναι μια υλοποίηση που βελτιώνει την καθυστέρηση διάδοσης κρατουμένου με έναν απλό τρόπο αλλά όχι αρκετά αποτελεσματικό σε σχέση με άλλες αρχιτεκτονικές. 
-Η χείριστη περίπτωση παρουσιάζεται παρομοίως με έναν ripple-carry, όταν το propagate στοιχείο είναι αληθές για κάθε ζευγάρι ψηφίων (A\_i B\_i).
-Ορίζοντας τον propagate όρο ως το XOR των Α\_i B\_i, όταν όλοι οι όροι propagate είναι αληθείς τότε το κρατούμενο εισόδου προσδιορίζει το κρατούμενο εξόδου.
+Η χείριστη περίπτωση παρουσιάζεται παρομοίως με έναν ripple-carry, όταν το propagate στοιχείο είναι αληθές για κάθε ζευγάρι ψηφίων $(A_i B_i)$.
+Ορίζοντας τον propagate όρο ως το XOR των $Α_i B_i$, όταν όλοι οι όροι propagate είναι αληθείς τότε το κρατούμενο εισόδου προσδιορίζει άμεσα το κρατούμενο εξόδου.
 Παίρνοντας κάθε όρο propagate και εισάγοντας τον σε μια n-εισόδων πύλη AND ορίζεται ο όρος select όπου οδηγεί την είσοδο επιλογής ενός πολυπλέκτη 2-σε-1, όπου η έξοδος του είναι το $c_{out}$ του αθροιστή, και όταν το select είναι αληθές τότε επιλέγεται το $c_{in}$, αλλιώς το $c_n$ .
 %ΣΗΜΑ 
 \begin{equation}
@@ -38,7 +38,7 @@
 \end{split}
 \end{equation}
 %ΟΡΙΣΕ ΑΝ ΘΑ ΛΕΣ ΤΟ ΚΡΑΤΟΥΜΕΝΟ ΕΙΣΟΔΟΥ C_0 ‘H C_-1
-Η βελτιστοποίηση της χείριστης περίπτωσης επιτυγχάνεται με την χρήση πολλαπλών αθροιστών παράβλεψης κρατουμένου για να δομήσουν έναν block-carry-skip αθροιστή. Στην αντίθετή περίπτωση η καθυστερήσεις είναι ίδιες με αυτές του ripple-carry.
+Η βελτιστοποίηση της χείριστης περίπτωσης επιτυγχάνεται με την χρήση πολλαπλών αθροιστών παράβλεψης κρατουμένου για να δομήσουν έναν block-carry-skip αθροιστή. Στην αντίθετη περίπτωση η καθυστερήσεις είναι ίδιες με αυτές του ripple-carry.
 Ο αριθμός των εισόδων της πύλης AND για τον υπολογισμό του select είναι ίσος με τον μήκος του αθροιστή με αποτέλεσμα ένας αθροιστής μεγάλου μήκους να καθίσταται μη πρακτικός εφόσον οδηγεί σε επιπλέον καθυστερήσεις, διότι η πύλη AND πρέπει να κατασκευαστεί σαν ένα δέντρο πυλών.   
 %-----------------
 
@@ -91,7 +91,7 @@
 \begin{figure}[H]
     \centering
     \includegraphics[height=9cm,width=10cm]{Pictures/CLA_Architecture.png}
-    \caption{CLA Architecture}
+    \caption{Αρχιτεκτονική αθροιστή πρόβλεψης κρατουμένου}
     \label{cla_architecture}
 \end{figure}
 
