--- a/BinaryAddition.tex
+++ b/BinaryAddition.tex
@@ -92,7 +92,7 @@
  1 & 1 & 1 & 1 & 1 \\
  \hline
 \end{tabular}
-\caption{Full Adder Truth Table}
+\caption{Πίνακάς αληθείας πλήρη αθροιστή}
 \label{table:2}
 \end{table}
 % Figure
@@ -101,7 +101,7 @@
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.3]{FA.png}
-\caption{Full-Adder schematic}
+\caption{Σύμβολο πλήρη αθροιστή}
 \label{FASchematic}
 \end{figure}
 \end{multicols}
@@ -123,16 +123,13 @@
 Η πρόσθεση δυο δυαδικών αριθμών A και Β των n δυαδικών ψηφίων είναι 
 μια επέκταση της πρόσθεσης μεταξύ ψηφίων που παρουσιάστηκε προηγουμένως τροφοδοτώντας 
 το κρατούμενο εξόδου των προηγούμενων σημαντικών ψηφίων στην είσοδο του πλήρη αθροιστή 
-των επομένων. Συμβολίζοντας $c_{i}$ το κρατούμενο που παράγεται από την πρόσθεση των ψηφίων 
-$a_i+b_i$. Επομένως το κάθε ψηφίο αθροίσματος, εκτός του πρώτου, υπολογίζεται από την 
+των επομένων. Το $c_{i}$ συμβολίζει το κρατούμενο που παράγεται από την πρόσθεση των ψηφίων 
+$a_i+b_i$. Επομένως το κάθε ψηφίο αθροίσματος, υπολογίζεται από την 
 λογική συνάρτηση:
 \begin{equation}
-\begin{split}
-    sum_i =& a_i \oplus b_i \oplus c_{i-1}\\
-    sum_0 =& a_0 \oplus b_0    
-\end{split}
+    sum_i = a_i \oplus b_i \oplus c_{i-1}\\
 \end{equation}
-
+Πρέπει αν σημειωθεί πως στο $sum_0 = a_0 \oplus b_0 \oplus c_{-1}$, το $c_{-1}$ έιναι το κρατούμενο εισόδου του αθροιστή (αν υπάρχει).
 % Figure
 % FA-Schematic
 %--------------------------------------------
