--- a/Ling.tex
+++ b/Ling.tex
@@ -59,7 +59,7 @@
     H_{4:2} &= g_4 + g_3 + p_3g_2 \\
     P_{6:4} &= p_6p_5p_4\\
     H_{7:2} &= g_7 + g_6 + p_6g_5 + p_6p_5p_4*\big(g_4 + g_3 + p_3g_2 \big)\\
-    H_{7:2} &= g_7 + g_6 + p_6g_5 + p_6p_5g_4 + p_6p_5p_4g_3 + p_6p_5p_4p_3g_2
+            &= g_7 + g_6 + p_6g_5 + p_6p_5g_4 + p_6p_5p_4g_3 + p_6p_5p_4p_3g_2
 \end{split}
 \end{equation*}
 Εφόσον στην παραγοντοποίηση που σύστησε ο Ling έχουν κληρονομηθεί όλα τα προνόμια 
@@ -135,8 +135,7 @@
 Στην πραγματικότητα όμως η απόδοση αφορά την καθυστέρησή και όχι το εμβαδόν. Το σήμα
 $Η$ είναι αυτό που υπολογίζεται τελευταίο χρονικά και στην πρώτη αρχιτεκτονική
 είναι στο κρίσιμο μονοπάτι. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
-έχει τελική τιμή στην έξοδο της πριν οριστικοποιηθεί η τιμή του σήματος H, παράλληλα 
-με τον υπολογισμό της. 
+έχει τελική τιμή στην έξοδο της πριν οριστικοποιηθεί η τιμή του σήματος H.
 
 %------------------------------------------------
  Παρατηρείται, λοιπόν,  πως η μέθοδος του Ling μειώνει την πολυπλοκότητα μόνο στο πρώτο επίπεδο του αθροιστή, ενώ η αύξηση πολυπλοκότητας του τελευταίου επιπέδου δεν επιβαρύνει τον σχεδιασμό χρονικά σύμφωνα με την παραπάνω τροποποίηση.
