--- a/Results.tex
+++ b/Results.tex
@@ -183,7 +183,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-2 Μετρήσεις 8-bit}
-\label{notopo_sparse2_result_table_8}
+\label{sparse2_result_table_8}
 \end{table}
 %------------------------------------------------------------------------------
 \begin{table}[H]
@@ -200,7 +200,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-2 Μετρήσεις 16-bit}
-\label{topo_sparse2_result_table_16}
+\label{sparse2_result_table_16}
 \end{table}
 %------------------------------------------------------------------------------
 \begin{table}[H]
@@ -217,7 +217,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-2 Μετρήσεις 32-bit}
-\label{topo_sparse2_result_table_32}
+\label{sparse2_result_table_32}
 \end{table}
 %------------------------------------------------------------------------------
 \begin{table}[H]
@@ -234,7 +234,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-2 Μετρήσεις 64-bit}
-\label{topo_sparse2_result_table_64}
+\label{sparse2_result_table_64}
 \end{table}
 %------------------------------------------------------------------------------
 \end{multicols}
@@ -267,7 +267,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 8-bit}
-\label{topo_sparse4_result_table_8}
+\label{sparse4_result_table_8}
 \end{table}
 %------------------------------------------------------------------------------
 \begin{table}[H]
@@ -284,7 +284,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 16-bit}
-\label{topo_sparse4_result_table_16}
+\label{sparse4_result_table_16}
 \end{table}
 %------------------------------------------------------------------------------
 \begin{table}[H]
@@ -301,7 +301,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 32-bit}
-\label{topo_sparse4_result_table_32}
+\label{sparse4_result_table_32}
 \end{table}
 %------------------------------------------------------------------------------
 \begin{table}[H]
@@ -318,7 +318,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 64-bit}
-\label{topo_sparse4_result_table_64}
+\label{sparse4_result_table_64}
 \end{table}
 %------------------------------------------------------------------------------
 \end{multicols}
@@ -559,7 +559,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Τοπογραφικές sparse-2 Μετρήσεις 64-bit}
-\label{topo sparse2_result_table_64}
+\label{topo_sparse2_result_table_64}
 \end{table}
 %------------------------------------------------------------------------------
 \end{multicols}
@@ -639,7 +639,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
     \end{tabular}
 \caption{Τοπογραφικές sparse-4 Μετρήσεις 64-bit}
-\label{topo sparse4_result_table_64}
+\label{topo_sparse4_result_table_64}
 \end{table}
 %------------------------------------------------------------------------------
 \end{multicols}
