--- a/modAdder.tex
+++ b/modAdder.tex
@@ -1,7 +1,7 @@
 \section{Αθροιστής υπολοίπου $2^n-1$}
 \label{section:mod_addition}
 Η αριθμητική υπολοίπου αφορά το υπόλοιπο ενός αριθμού X διαιρεμένου με έναν Y, εναλλακτικά
-αφαιρείτε από το Χ το Y μέχρι $X < Y$. Την πράξη αυτή την συμβολίζουμε ως 
+αφαιρείτε από το Χ το Y μέχρι $X < Y$. Η πράξη αυτή συμβολίζεται ως 
 \begin{equation*}
     X\ mod\ Y
 \end{equation*}
@@ -75,7 +75,7 @@
  εικόνα \ref{fig:2^n-1_carry_select_adder}.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Carry_select_2^n-1.png}
+    \includegraphics[height=4cm,width=8.5cm]{Carry_select_2^n-1.png}
     \caption{Αρχιτεκτονική αθροιστή επιλογής κρατουμένου $2^n-1$}
     \label{fig:2^n-1_carry_select_adder}
 \end{figure}
@@ -93,8 +93,8 @@
 καθυστέρηση της διάδοσης κρατουμένων. Εξαιτίας αυτής της συμπεριφοράς δημιουργούνται
 πρακτικά προβλήματα χρονισμού με αποτέλεσμα την επιπλέον αύξηση του χρόνου καθυστέρησης.
 Το πρόβλημα αυτό παρατηρείται στις περιπτώσεις που οι δυαδικοί αριθμοί εισόδου 
-είναι συμπληρωματικοί ως προς ένα και αντιμετωπίζεται \cite{1674817} οδηγώντας την είσοδο 
-κρατουμένου με την παρακάτω συνάρτηση και όχι απευθείας με το κρατούμενο εξόδου.
+είναι συμπληρωματικοί ως προς ένα και αντιμετωπίζεται οδηγώντας την είσοδο 
+κρατουμένου με την παρακάτω συνάρτηση και όχι απευθείας με το κρατούμενο εξόδου \cite{1674817}.
 \begin{equation}
     C_{in} = C_{out} + P_{n-1:0}
 \end{equation}
@@ -258,7 +258,7 @@ $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα
         (G^*_i,P^*_i) &= (G_i,P_i) \circledast (g_{n-1},p_{n-1}) \circledast ... \circledast (g_{i+1},p_{i+1})
     \end{split}
 \end{equation}
-Στην τελευταία ισότητα της παραπάνω διαδικασίας εφαρμόζεται ο ισχυρισμός της εξίσωσης \ref{eq:GgG=Gg}
+Στην τελευταία ισότητα της παραπάνω διαδικασίας εφαρμόζεται ο ισχυρισμός της εξίσωσης \ref{eq:GgG=Gg}.
 Η σχέση της εξίσωσης \ref{eq:(G*,P*)_new} είναι και η αρχιτεκτονική βελτίωση των αθροιστών υπολοίπου
 $2^n-1$.
 
@@ -266,9 +266,8 @@ $2^n-1$.
 έκφραση συναρτήσεων και όρων. Το σήμα $G_{i}$ αντιπροσωπεύει το $G_{i:0}$, δηλαδή
 έχει κάθε ζευγάρι $(g_k,p_k)$, με $ i \geq k \geq 0 $, με τον τελεστή $\circledast$.
 Είναι δυνατό, όπως έχει προαναφερθεί, να έχουμε τον όρο $G_{i:j}$, με $ i \geq j$ με
-την περίπτωση της ισότητας τότε το $G_{i:i} = g_i$ και $G_{i:0}=c_i$. Θα οριστεί μια νέα έκφραση, η οποία 
-προβλέπει την περίπτωση του $i < j$ στην έκφραση $G_{i:j}$. Στην περίπτωση, λοιπόν, που το
-$i < j$, τότε προβλέπεται :
+την περίπτωση της ισότητας τότε το $G_{i:i} = g_i$ και στην περίπτωση όπου το $j=0$ ισχύει $G_{i:0}=c_i$. Θα οριστεί μια νέα έκφραση, η οποία 
+προβλέπει την περίπτωση του $i < j$ στην έκφραση $G_{i:j}$. Διατυπώνεται λοιπόν ο παρακάτω συμβολισμός.
 % \begin{equation*}
 %     (G_{i:j},P_{i:j} = (G_i,P_i) \circledast (G_{n-1:j},P_{n-1:j})
 % \end{equation*}
