--- a/titlepage.tex
+++ b/titlepage.tex
@@ -13,7 +13,7 @@
 	
 	\textsc{\LARGE ΤΜΗΜΑ ΜΗΧΑΝΙΚΏΝ ΗΛΕΚΤΡΟΝΙΚΩΝ \\[0.2cm] ΥΠΟΛΟΓΙΣΤΩΝ ΚΑΙ ΠΛΗΡΟΦΟΡΙΚΗΣ}\\[1.5cm]
 	\textsc{\Large ΠΑΝΕΠΙΣΤΗΜΙΟ ΠΑΤΡΑΣ}\\[0.8cm] 
-	\textsc{\large \today}\\[1cm]
+	\textsc{\large 9 Ιουλίου, 2018}\\[1cm]
 	
 	%------------------------------------------------
 	%	Title
