--- a/Introduction.tex
+++ b/Introduction.tex
@@ -3,12 +3,12 @@
 
 Οι αριθμητικές μονάδες είναι βασικά στοιχεία στο σύνολο του υλικού των ηλεκτρονικών υπολογιστών. Οι περισσότερες επεξεργαστικές μονάδες έχουν ως βασικό δομικό στοιχείο την Αριθμητική Λογική Μονάδα (ΑΛΜ) ή Arithmetic Logic Unit (ALU) η οποία είναι υπεύθυνη για την υλοποίηση βασικών αριθμητικών πράξεων όπως πρόσθεση και πολλαπλασιασμό αλλά και λογικών πράξεων όπως OR, AND και XOR. Αυτές οι μονάδες είναι κρίσιμες στην ορθή λειτουργία ενός συστήματος αλλά και την ταχύτητα.
 
-Η πρόσθεση αποτελεί την θεμελιώδης πράξη των ψηφιακών συστημάτων. Επίσης είναι η πιο συχνά εκτελούμενη πράξη που εκτελείται από τις επεξεργαστικές μονάδες. Συμπεραίνετε λοιπόν η μεγάλη κρισιμότητα της ορθής λειτουργίας της αλλά και την ταχύτητας υπολογισμού. 
+Η πρόσθεση αποτελεί θεμελιώδης πράξη των ψηφιακών συστημάτων. Επίσης είναι η πιο συχνά εκτελούμενη πράξη από τις επεξεργαστικές μονάδες. Συμπεραίνετε λοιπόν η μεγάλη κρισιμότητα της ορθής λειτουργίας της αλλά και της ταχύτητας υπολογισμού. 
 
 Ένα από τα μεγαλύτερα εμπόδια, όσο αφορά την ταχύτητα υπολογισμού του αθροίσματος, είναι ο χρόνος υπολογισμού των ενδιάμεσων κρατουμένων αλλά και του κρατούμενου εξόδου. Μία από τις μεγαλύτερες καινοτομίες που παρουσιάστηκαν με σκοπό την ελαχιστοποίηση των χρονικών αυτών διαστημάτων, είναι οι αρχιτεκτονικές πρόβλεψης κρατουμένων ή Carry Look Ahead (CLA). Η δομή των CLA αθροιστών απασχόλησε αρκετά την επιστημονική κοινότητα, με αρκετές προτάσεις υλοποίησης, η κάθε μία με διαφορετικές απαιτήσεις πόρων ανάλογα την εφαρμογή.
 
 
-Στην παρούσα διπλωματική εργασία θα αναλυθούν οι αθροιστές και συγκεκριμένα μια υποομάδα αυτών , οι αθροιστές υπολοίπου $2^n-1$. Η ομάδα αυτών των αθροιστών είναι χρήσιμη στα Συστήματα Αριθμού Υπολειμμάτων ή Residue Number Systems (RNS), Συστήματα Ανθεκτικά σε Σφάλματα ή Fault-Tolerant Systems, στην ανίχνευση σφάλματος στα συστήματα δικτύου καθώς και στις αριθμητικές πράξεις κινητής υποδιαστολής. Οι αθροιστές υπολοίπου δεν διαφέρουν πολύ από τους απλούς αθροιστές. Αν όχι όλες, τουλάχιστον οι περισσότερες κατηγορίες αθροιστών συμμερίζονται τον υπολογισμό των κρατουμένων στο κρίσιμο μονοπάτι τους, όπως και οι αθροιστές υπολοίπου.
+Στην παρούσα διπλωματική εργασία θα αναλυθούν οι αθροιστές και συγκεκριμένα μια υποομάδα αυτών , οι αθροιστές υπολοίπου $2^n-1$. Η ομάδα αυτών των αθροιστών είναι χρήσιμη στα Συστήματα Αριθμητικών Υπολειμμάτων ή Residue Number Systems (RNS), στα Συστήματα Ανθεκτικά σε Σφάλματα ή Fault-Tolerant Systems, στην ανίχνευση σφάλματος στα συστήματα δικτύου καθώς και στις αριθμητικές πράξεις κινητής υποδιαστολής. Οι αθροιστές υπολοίπου δεν διαφέρουν πολύ από τους απλούς αθροιστές. Αν όχι όλες, τουλάχιστον οι περισσότερες κατηγορίες αθροιστών συμμερίζονται τον υπολογισμό των κρατουμένων στο κρίσιμο μονοπάτι τους, όπως και οι αθροιστές υπολοίπου.
 
 Στα επόμενα κεφάλαια θα πραγματοποιηθεί μια ουσιαστική αναδρομή βασικών αρχιτεκτονικών 
 που αφορούν την πράξη της πρόσθεσης. Θα αναλυθούν οι δομές που είναι πιο διαδεδομένες και
@@ -17,4 +17,4 @@
 βελτιστοποίησης τους. Τέλος, αναπτύσσεται ένας αθροιστής υπολοίπου, συνδυάζοντας διάφορες 
 τεχνικές και σχεδιασμούς που έχουν αναφερθεί. Οι αθροιστές που θα αναπτυχθούν, εφόσον ελεγχθούν επαρκώς, θα συγκριθούν με παρελθοντικές υλοποιήσεις όσο αφορά το χρόνο, χώρο και κατανάλωση ενέργειας.
 
-Η δομή του συγκεκριμένου εγγράφου είναι τέτοια ώστε να υπάρχει μια λογική σύνδεση μεταξύ των ενοτήτων. Μολονότι στην παρούσα αναφορά αναλύονται θεμελιώδης έννοιες, η γνώση σχεδίασης ψηφιακών κυκλωμάτων, λογικών πυλών και συναρτήσεων, καθώς και δυαδικής αναπαράστασης θεωρείται προαπαιτούμενη για τον αναγνώστη ώστε να είναι σε θέση να συλλάβει κάθε πληροφορία. Στα παρακάτω κεφάλαια δίνεται ιδιαίτερη προσοχή στα θέματα που συνέβαλαν στο σχεδιασμό του τελικού αθροιστή, περιορίζοντας έτσι τον μεγάλο όγκο πληροφορίας. Κάθε τεχνική και αρχιτεκτονική παρουσιάζεται με συγκεκριμένη σειρά και ανάλυση δίνοντας στον αναγνώστη την δυνατότητα πλήρης κατανόησης, αναπαραγωγής καθώς και βελτίωσης των αθροιστών που υλοποιήθηκαν.
+Η δομή του συγκεκριμένου εγγράφου είναι τέτοια ώστε να υπάρχει μια λογική σύνδεση μεταξύ των ενοτήτων. Μολονότι στην παρούσα αναφορά αναλύονται θεμελιώδεις έννοιες, η γνώση σχεδίασης ψηφιακών κυκλωμάτων, λογικών πυλών και συναρτήσεων, καθώς και δυαδικής αναπαράστασης θεωρείται προαπαιτούμενη για τον αναγνώστη ώστε να είναι σε θέση να συλλάβει κάθε πληροφορία. Στα παρακάτω κεφάλαια δίνεται ιδιαίτερη προσοχή στα θέματα που συνέβαλαν στο σχεδιασμό του τελικού αθροιστή, περιορίζοντας έτσι τον μεγάλο όγκο πληροφορίας. Κάθε τεχνική και αρχιτεκτονική παρουσιάζεται με συγκεκριμένη σειρά και ανάλυση δίνοντας στον αναγνώστη την δυνατότητα πλήρης κατανόησης, αναπαραγωγής καθώς και βελτίωσης των αθροιστών που υλοποιήθηκαν.
